# napari-clusters-plotter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  codecov.yml  demo_new_plotter.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_book.yml  test_and_deploy.yml
.napari/: config.yml
Notebooks/: Plotting results of visualisation testing.ipynb  Testing Cluster Image Generation - 3D (viewer in 3D).ipynb  Testing Cluster Image Generation - 3D.ipynb  Testing Cluster Image Generation - 4D.ipynb  table_with_prediction.csv  testing cmap generation.ipynb
benchmarking notebooks/: Testing Cluster Image Generation - 4D - (viewer in 3D).ipynb  Testing Cluster Image Generation - 4D.ipynb
docs/: Processing a single timepoint.ipynb  _config.yml  _toc.yml  api.rst  intro.md  requirements.txt  testing timelapse neighbourhood measurements.ipynb
docs/contributing/: documentation.md  new_algorithm.md
docs/examples/: sample_data.md
docs/usage/: clustering_widget.md  dimensionality_reduction_widget.md  overview.md  plotter_widget.md  supported_layers.md
example_data/points_data/: dataframe_human_mitsosis.csv  loading_points_data_example.ipynb
example_data/surface_data/: Readme.md  gastruloid_surface_example.npy  gastruloid_surface_features.csv  loading_surface_data_example.ipynb
example_data/tracking_data/: LICENSE  README.md  loading_tracking_data_example.ipynb  tgmm-mini-tracks-layer-data.csv
napari_clusters_plotter/: _Qt_code.py  __init__.py  _algorithms.py  _annotation_to_clusters.py  _clustering.py  _defaults.py  _dim_reduction_and_clustering.py  _dimension_reduction.py  _dimensionality_reduction.py  _dimensionality_reduction_new.py  _dock_widget.py  _feature_selection.py  _import_measurements.py  _kmeans_clustering.py  _measure.py  _new_plotter_widget.py  _plotter.py  _plotter_utilities.py  _tsne.py  _umap.py  _utilities.py  napari.yaml  new_plotter_widget.py  plotter.py  plotter_inputs.ui  selectors.py  tgmm-mini-spot.csv
napari_clusters_plotter/_tests/: test_clustering.py  test_dimension_reduction.py  test_dimensionality_reduction.py  test_dock_widget.py  test_measure.py  test_measurements.py  test_plotter.py  test_surface_data.py  test_utilities.py  test_utils.py  try_napari_cluster_plotter.py
napari_clusters_plotter/notebooks/: demo_new_plotter.ipynb  dummy_plotter_test.ipynb
notebooks/: demo_biological_data.ipynb  demo_cluster_export.ipynb  demo_new_plotter.ipynb  demo_new_reduction.ipynb  demo_shapes_clustering.ipynb
notebooks/data/BBBC007_v1_images/: data_source.txt
notebooks/data/BBBC007_v1_images/A9/: A9 p10d.tif
notebooks/data/BBBC007_v1_images/f96 (17)/: 17P1_POS0007_D_1UL.tif  17P1_POS0014_D_1UL.tif
notebooks/data/BBBC007_v1_images/f9620/: 20P1_POS0002_D_1UL.tif  20P1_POS0008_D_1UL.tif  20P1_POS0010_D_1UL.tif
src/napari_clusters_plotter/: _Qt_code.py  __init__.py  _algorithm_widget.py  _algorithms.py  _clustering.py  _create_sample_data_assets.py  _dim_reduction_and_clustering.py  _dimensionality_reduction.py  _dock_widget.py  _new_plotter_widget.py  _plotter.py  _plotter_utilities.py  _sample_data.py  _utilities.py  _version.py  napari.yaml  plotter_controls.ui  plotter_inputs.ui
src/napari_clusters_plotter/_tests/: test_dimensionality_reduction.py  test_dock_widget.py  test_layers.py  test_plotter.py  test_sample_data.py
src/napari_clusters_plotter/sample_data/: create_sample_data_assets.py
src/napari_clusters_plotter/sample_data/BBBC007_v1_images/: data_source.txt
src/napari_clusters_plotter/sample_data/BBBC007_v1_images/A9/: A9 p10d_features.csv  A9 p10d_labels.tif  A9 p10d_labels_labels.tif  A9 p5d.tif  A9 p5d_features.csv  A9 p5d_labels.tif  A9 p5d_labels_labels.tif  A9 p7d_features.csv  A9 p7d_labels_labels.tif  A9 p9d_features.csv  A9 p9d_labels.tif  A9 p9d_labels_labels.tif  A9_p7d.tif  A9_p7d_features.csv  A9_p7d_labels.tif  A9_p9d.tif  A9_p9d_features.csv
src/napari_clusters_plotter/sample_data/BBBC007_v1_images/f96 (17)/: 17P1_POS0006_D_1UL.tif  17P1_POS0006_D_1UL_features.csv  17P1_POS0006_D_1UL_labels.tif  17P1_POS0006_D_1UL_labels_labels.tif  17P1_POS0007_D_1UL_features.csv  17P1_POS0007_D_1UL_labels.tif  17P1_POS0007_D_1UL_labels_labels.tif  17P1_POS0011_D_1UL.tif  17P1_POS0011_D_1UL_features.csv  17P1_POS0011_D_1UL_labels_labels.tif  17P1_POS0013_D_1UL.tif  17P1_POS0013_D_1UL_features.csv  17P1_POS0013_D_1UL_labels.tif  17P1_POS0013_D_1UL_labels_labels.tif  17P1_POS0014_D_1UL_features.csv  17P1_POS0014_D_1UL_labels.tif  17P1_POS0014_D_1UL_labels_labels.tif
src/napari_clusters_plotter/sample_data/BBBC007_v1_images/f9620/: 20P1_POS0002_D_1UL_labels.tif  20P1_POS0002_D_1UL_labels_labels.tif  20P1_POS0005_D_1UL.tif  20P1_POS0005_D_1UL_features.csv  20P1_POS0005_D_1UL_labels.tif  20P1_POS0005_D_1UL_labels_labels.tif  20P1_POS0007_D_1UL.tif  20P1_POS0007_D_1UL_features.csv  20P1_POS0007_D_1UL_labels.tif  20P1_POS0007_D_1UL_labels_labels.tif  20P1_POS0008_D_1UL_features.csv  20P1_POS0008_D_1UL_labels.tif  20P1_POS0008_D_1UL_labels_labels.tif  20P1_POS0010_D_1UL.tif  20P1_POS0010_D_1UL_features.csv  20P1_POS0010_D_1UL_labels.tif  20P1_POS0010_D_1UL_labels_labels.tif  20P1_POS0011_D_1UL.tif  20P1_POS0011_D_1UL_features.csv  20P1_POS0011_D_1UL_labels.tif  20P1_POS0011_D_1UL_labels_labels.tif
src/napari_clusters_plotter/sample_data/BBBC007_v1_images/f96_17/: 17P1_POS0007_D_1UL_features.csv  17P1_POS0011_D_1UL_labels.tif  17P1_POS0013_D_1UL_features.csv  17P1_POS0014_D_1UL.tif  17P1_POS0014_D_1UL_features.csv
src/napari_clusters_plotter/sample_data/cells3d/: faces.txt  nucleus.tif  signature.csv  vertices.txt
src/napari_clusters_plotter/sample_data/compression_vectors/: data_source.txt
src/napari_clusters_plotter/sample_data/shapes_skeleton/: all_paths.csv  blobs.tif  skeleton_features.csv
src/napari_clusters_plotter/sample_data/tracking_data/: LICENSE  tgmm-mini-spot.csv  tgmm-mini.csv
