[project]
name = "napari-clusters-plotter"
dynamic = ["version"]
description = "A plugin to use with napari for clustering objects according to their properties"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Laura Zigutyte"},
  {name = "Ryan Savill"},
  {name = "Johannes Soltwedel", email = "johannes_richard.soltwedel@tu-dresden.de"},
  {name = "Marcelo Zoccoler"},
  {name = "Thorsten Wagner"},
  {name = "Robert Haase"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "napari",
    "npe2",
    "scikit-learn",
    "pandas",
    "umap-learn",
    "scikit-image",
    "scipy",
    "biaplotter>=0.3.1",
    "imagecodecs"
]


[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
"napari-clusters-plotter" = "napari_clusters_plotter:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/BiAPoL/napari-clusters-plotter/issues"
"Documentation" = "https://github.com/BiAPoL/napari-clusters-plotter"
"Source Code" = "https://github.com/BiAPoL/napari-clusters-plotter"
"User Support" = "https://github.com/BiAPoL/napari-clusters-plotter/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_clusters_plotter/_version.py"
fallback_version = "0.0.1+nogit"

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, re-enable after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
