[metadata]
name = napari-clusters-plotter
version = 0.2.2
author = Laura Zigutyte, Ryan Savill, Marcelo Zoccoler, Robert Haase
author_email = zigutyte@gmail.com, robert.haase@tu-dresden.de

url = https://github.com/BiAPoL/napari-clusters-plotter
project_urls =
    Bug Tracker = https://github.com/BiAPoL/napari-clusters-plotter/issues
    Documentation = https://github.com/BiAPoL/napari-clusters-plotter
    Source Code = https://github.com/BiAPoL/napari-clusters-plotter
    User Support = https://github.com/BiAPoL/napari-clusters-plotter/issues

license = BSD-3-Clause
description = A plugin to use with napari for clustering objects according to their properties
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7, <3.10

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    pyopencl
    pyclesperanto-prototype
    scikit-learn
    pandas
    umap-learn
    napari-tools-menu
    napari-skimage-regionprops>=0.2.0
    hdbscan


[options.entry_points]
napari.plugin =
    napari-clusters-plotter = napari_clusters_plotter
