[metadata]
name = napari-clusters-plotter
version = 0.7.3
author = Laura Zigutyte, Ryan Savill, Johannes Müller, Marcelo Zoccoler, Thorsten Wagner, Robert Haase
author_email = zigutyte@gmail.com, robert.haase@tu-dresden.de

url = https://github.com/BiAPoL/napari-clusters-plotter
project_urls =
    Bug Tracker = https://github.com/BiAPoL/napari-clusters-plotter/issues
    Documentation = https://github.com/BiAPoL/napari-clusters-plotter
    Source Code = https://github.com/BiAPoL/napari-clusters-plotter
    User Support = https://github.com/BiAPoL/napari-clusters-plotter/issues

license = BSD-3-Clause
description = A plugin to use with napari for clustering objects according to their properties
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
# remove pinned numpy version after incompatibility with numba is fixed
# see here https://github.com/BiAPoL/napari-clusters-plotter/issues/215
install_requires =
    napari-plugin-engine>=0.1.4
    numpy>=1.21,<=1.23.5
    scikit-learn
    matplotlib
    pandas
    umap-learn
    napari-tools-menu
    napari-skimage-regionprops>=0.3.1
    hdbscan
    qtpy
    dask-core
    napari
    magicgui
    scikit-image
    superqt
    scipy


[options.entry_points]
napari.plugin =
    napari-clusters-plotter = napari_clusters_plotter


[flake8]
max-line-length = 120
ignore = E203,W503,C901,F823
max-complexity = 18
builtins = pytest
exclude = napari_clusters_plotter/__init__.py, example_data, images, napari_clusters_plotter/_get_colormap.py
banned-modules = PyQt5 = use qtpy
    PySide2 = use qtpy


[isort]
profile = black
